@@ -1,5 +1,9 @@
 2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
+	* Makefile.am (FETCHFILES, fetch): Get INSTALL from Autoconf CVS.
+
+2002-05-06  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
 	Erase stamps from the Makefile that generates them.
 
 	* automake.in (handle_configure): Append each used stamp to
